# MaaSR-PluginTemplate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  init_dev.py  plugin.json  pyproject.toml
.github/workflows/: release.yml
docs/: cicd.md  configuration.md  development-guide.md  installation.md  plugin-schema.json  quick-start.md  troubleshooting.md  vscode-launch.md
plugin_framework/: __init__.py  config.py  plugin_manager.py
scripts/: __init__.py  build_plugin.py  download_wheels.py  init_dev.py  run_local.py
src/: __init__.py  __main__.py  example_plugin.py  plugin_manager.py
src/maasr_plugin_example/: __init__.py  example_plugin.py
src/utils/: common_util.py
