[project]
name = "example-plugin"
version = "1.0.0"
description = "MaaStarResonance 侧载插件模板示例"
authors = [
    { name = "AZMIAO", email = "2362020227@qq.com" },
]
license = { text = "AGPL-3.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pip>=25.3",
]

[project.scripts]
init-dev = "init_dev:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["init_dev"]

# 插件元数据配置
[tool.plugin]
name = "example_plugin"
display_name = "示例插件"
entry_point = "example_plugin"
platform = "windows"
min_python_version = "3.11"

# isort检查工具配置
[tool.isort]
src_paths = ["src", "scripts"]
force_single_line = false
multi_line_output = 0
include_trailing_comma = false
ensure_newline_before_comments = true
line_length = 120
combine_as_imports = true
lines_between_sections = 1
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY"]
