[project]
# 插件项目ID
name = "example-plugin"
# 版本号
version = "1.0.0"
# 描述
description = "MaaStarResonance 侧载插件模板示例"
# 作者
authors = [
    { name = "AZMIAO", email = "2362020227@qq.com" },
]
# License
license = { text = "AGPL-3.0" }
# 帮助文档
readme = "README.md"
# Python版本要求
requires-python = ">=3.13"
# 运行和打包生成插件包所需独立依赖，只填主项目没有的依赖 | 打包时会生成 whl 文件
dependencies = [
    # "requests>=2.31.0",
]

[project.optional-dependencies]
# 主项目已有的依赖，取消注释后说明本插件也需要使用 | 打包时不会生成 whl 重复安装
dev = [
    "pip>=25.3",
#    "loguru>=0.7.3",
#    "maafw==5.10.0",
#    "pre-commit>=4.5.0",
#    "rapidfuzz>=3.14.3",
#    "toml>=0.10.2",
#    "tzdata>=2025.2",
]

# 插件元数据配置
[tool.plugin]
# 插件显示名字
display_name = "示例插件"
# 程序入口 | 一般填写 src 下的插件包名即可
entry_point = "maasr_plugin_example"

# 程序同步更新脚本
[project.scripts]
init-dev = "scripts.init_dev:main"

# UV 包配置
[tool.uv]
package = true

# 本地开发扫描包路径
[tool.setuptools.packages.find]
where = ["src", "."]
exclude = ["tests*", "docs*"]

# isort检查工具配置
[tool.isort]
src_paths = ["src", "scripts"]
force_single_line = false
multi_line_output = 0
include_trailing_comma = false
ensure_newline_before_comments = true
line_length = 120
combine_as_imports = true
lines_between_sections = 1
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY"]
